package de.db.vendo.prototype.buchung.reservation.divers.adapters.use_cases.entities.reservation.boundary.control.entity

enum class ReservationStatus {
  SUBMIT, CONFIRM, RESET
}
