package de.db.vendo.prototype.buchung.reservation.divers.adapters.use_cases.entities.reservation.trip.train.wagon.boundary.control.entity

data class Wagon(val id: Wagon, val name: String, val number: String)
